first webpage to show all hotels, change to use JSON to hold all summaries

--- a/tripadvisor/webapp/templates/summary.html
+++ b/tripadvisor/webapp/templates/summary.html
@@ -16,10 +16,10 @@
 
         {% for summary in summaries %}
             <tr>
-                <th>{{ summary[0] }}</th>
-                <th>{{ summary[1] }}</th>
-                <th>{{ summary[2] }}</th>
-                <th>{{ summary[3] }}</th>
+                <th>{{ summary["Id"] }}</th>
+                <th>{{ summary["Name"] }}</th>
+                <th>{{ summary["Price"] }}</th>
+                <th>{{ summary["NumReviews"] }}</th>
             </tr>
         {% endfor %}
 
