--- a/tripadvisor/webapp/templates/summary.html
+++ b/tripadvisor/webapp/templates/summary.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Hotel Summary</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style1.css') }}">
     </head>
     <body>
         <table  >
