--- a/tripadvisor/webapp/templates/details.html
+++ b/tripadvisor/webapp/templates/details.html
@@ -2,10 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>{{ hotel.name }}</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style1.css') }}">
     </head>
     <body>
         <h2>{{ hotel.name }}</h2>
+        <h3>{{ hotel.price }}</h3>
+
+        <table  >
+            <tr>
+            <th>Ratings</th>
+            <th>Comments</th>
+            </tr>
+
+            {% for review in hotel.reviews %}
+                <tr>
+                    <th>NA</th>
+                    <th>{{ review.content}}</th>
+                </tr>
+            {% endfor %}
+
+        </table>
 
     </body>
 </html>
