correct a bug, we should use td to define the row in the table, not th, that is only for headers

--- a/tripadvisor/webapp/templates/details.html
+++ b/tripadvisor/webapp/templates/details.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -17,8 +18,8 @@
 
             {% for review in hotel.reviews %}
                 <tr>
-                    <th>NA</th>
-                    <th>{{ review.content}}</th>
+                    <td>NA</td>
+                    <td>{{ review.content}}</td>
                 </tr>
             {% endfor %}
 
