add a checkbox beside the update button
control whether re-load and re-check the same review after update

--- a/aspect_sentiment_edit/templates/review.html
+++ b/aspect_sentiment_edit/templates/review.html
@@ -57,8 +57,10 @@
             </ul>
         </p>
         <form method="post">
-
-            <button type="submit" style="background-color:orange;font-size:1.2em;font-weight:bold">Update Review</button>
+            <p>
+                <button type="submit" style="background-color:orange;font-size:1.2em;font-weight:bold">Update Review</button>
+                <input type="checkbox" name="check_after_update" checked />Check After Update<br />
+            </p>
 
             <table  >
                 <tr>
