the default option is not reload after update

--- a/aspect_sentiment_edit/templates/review.html
+++ b/aspect_sentiment_edit/templates/review.html
@@ -59,7 +59,7 @@
         <form method="post">
             <p>
                 <button type="submit" style="background-color:orange;font-size:1.2em;font-weight:bold">Update Review</button>
-                <input type="checkbox" name="check_after_update" checked />Check After Update<br />
+                <input type="checkbox" name="check_after_update"  />Check After Update<br />
             </p>
 
             <table  >
