show current database name on webpage

--- a/aspect_sentiment_edit/templates/index.html
+++ b/aspect_sentiment_edit/templates/index.html
@@ -6,7 +6,7 @@
         <title>Home</title>
     </head>
     <body>
-        <h2>Table of Content</h2>
+        <h2>Current Database: {{dbname}}</h2>
         <ul>
             <li><a href="{{url_for('next_random_review')}}">Next Random Review</a></li>
         </ul>
