give the app option to display review without classify first

--- a/aspect_sentiment_edit/templates/review.html
+++ b/aspect_sentiment_edit/templates/review.html
@@ -56,10 +56,12 @@
         </p>
         <form method="post">
             <p>
-                <a href="{{url_for('next_random_review')}}" style='font-size:1.2em;font-weight:bold'>Next Random Review<a>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="{{url_for('next_random_review')}}" style='font-size:1.2em;font-weight:bold'>Next Random Review</a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="submit" style="background-color:orange;font-size:1.2em;font-weight:bold">Update Review</button>
-                <input type="checkbox" name="check_after_update"  />Check After Update<br />
+                <input type="checkbox" name="check_after_update"  />Check After Update</input>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="{{url_for('show_review',review_id=review.id, classify=0)}}" style='font-size:1.2em;font-weight:bold'>Load without classify</a>
             </p>
 
             <table  >
